fix: raise TOC breakpoint to 1800px to avoid overlap with wide images

--- a/assets/css/blog/single.css
+++ b/assets/css/blog/single.css
@@ -132,7 +132,7 @@
     display: none;
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1800px) {
     .post-toc {
         display: block;
         position: fixed;
